# altcha-solver

./: pyproject.toml
src/altcha_solver/: __init__.py  solve.py
tests/: test_solve.py
