[project]
name = "altcha-solver"
version = "0.1.0"
description = "Solver for altcha captchas"
readme = "README.md"
authors = [
    { name = "Eli", email = "53414320+Eli-Chandler@users.noreply.github.com" }
]
requires-python = ">=3.9"
dependencies = [
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.4",
    "pytest-asyncio>=0.21.2",
    "pytest-benchmark>=4.0.0",
]


[project.scripts]
altcha-solver = "altcha_solver:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
